--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>proyecto Erik</h1>
-    <script src="./proyecto1.js"></script>
+    <script src="./js/proyecto1.js"></script>
 </body>
 </html>
