creo que ya quedo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Proyecto Erik</title>
 </head>
 <body>
-    <h1>proyecto Erik</h1>
-    <p>asereje</p>
+    <div>
+    <h1>Calculadora de ahorro</h1>
+    <p>Proyecto erik</p>
+    </div>
     <script src="./js/proyecto1.js"></script>
 </body>
 </html>
