--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-    <h1>Calculadora de ahorro</h1>
+    <h1 id="titulo">Calculadora de ahorro</h1>
     <p>Proyecto erik</p>
     </div>
     <script src="./js/proyecto1.js"></script>
