--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -10,7 +10,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>Calculadora</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Arreglando tu Economia</a>
+                    <a class="navbar-brand" href="../index.html">Arreglando tu Economia</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./index.html">calculadora</a>
+                                <a class="nav-link active" aria-current="page" href="./calculadora.html">calculadora</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Consejos</a>
@@ -70,8 +70,9 @@
                 <input id="meses" type="text" placeholder="En cuantos meses?">
 
                 <input id="sueldo" type="text" placeholder="con cuanto ingreso contas mensualmente?">
-                <button id="calcular">Calcular</button>
                 <div class="container">
+                    <button id="calcular"class="btn btn-primary"><a class="calcular" href="#exponer_datos">Calcular</a></button>
+
                     <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
                         aria-controls="offcanvasExample">
                         Historial
