--- a/index.html
+++ b/index.html
@@ -65,12 +65,11 @@
                 <h1 id="titulo">Calculadora de ahorro</h1>
                     <section class="form-login">
                         <h5>Bienvenido a la Calculadora</h5>
-                        <input class="controls" id="user" type="text" name="usuario" value="" placeholder="Usuario">
-                        <input class="controls" id="pass" type="password" name="contrasena" value="" placeholder="Contraseña">
-                        <input class="btn-ingresar" id="btn_ingresar" type="submit" name="" value="Ingresar">
-                        <input class="btn-crear" id="btn_crear" type="submit" value="Crear Usuario">
-                        <p><a href="#">¿Olvidaste tu Contraseña?</a></p>
 
+                        <div>
+                        <p>LOGIN DE USUARIO(proximamente)</p>
+                        <a href="./pages/calculadora.html">CONTINUAR AQUI PARA VER EL PROYECTO</a>
+                        </div>
                     </section>
                 <p>Proyecto erik</p>
             </div>
