--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #017bab;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Arreglando tu Economia</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -30,58 +30,38 @@
                             <a class="nav-link active" aria-current="page" href="./pages/calculadora.html">calculadora</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/calculadora.html">Calculadora</a>
+                            <a class="nav-link" href="./pages/consejos.html">consejos</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                 </div>
             </div>
         </nav>
 
     </header>
+    <div  class="row mweather" >
+        <div id="weather"></div>
+    </div>
     <div class="row ">
         <main>
             <div>
-                <h1 id="titulo">Calculadora de ahorro</h1>
                     <section class="form-login">
                         <h5>Bienvenido a la Calculadora</h5>
-
                         <div>
-                        <p>LOGIN DE USUARIO(proximamente)</p>
-                        <a href="./pages/calculadora.html">CONTINUAR AQUI PARA VER EL PROYECTO</a>
+                        <a href="./pages/calculadora.html" class="hh1">LISTO PARA EMPEZAR A AHORRAR?</a>
                         </div>
+                        <img src="./imagenes/stonks.webp" alt="">
                     </section>
                 <p>Proyecto erik</p>
             </div>
         </main>
     </div>
-
+</ul>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-    <script src="./js/script.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./js/proyecto2.js"></script>
+
 </body>
 
 </html>
