--- a/pages/consejos.html
+++ b/pages/consejos.html
@@ -91,13 +91,23 @@
                         </div>
                         
                     </section>
+                    <iframe id="zaia-iframe"
+                    src="https://platform.zaia.app/embed/chat/21350"
+                    style="border: none; width: 400px; height: 600px; border-radius: 20px; border: 1px #eee solid;">
+                  </iframe>
                 <p>Proyecto erik</p>
             </div>
         </main>
         
 
     </main>
-
+    <script>
+        window.Zaia = {
+          AgentURL: "https://platform.zaia.app/embed/chat/21350",
+        };
+      </script>
+      <!-- Widget Loader Script -->
+      <script src="https://cdn.zapgpt.com.br/widget-loader.js"></script>
 
 
 
